--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
-
 .hidden {
     display: none;
+} 
+.hcontainer {
+    color: black;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 16pt;
 }
+.nav-link {
+    color: black;
+    list-style-type: circle;
+}
+
+
+    
